--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,16 @@
 {
-  "printWidth": 80,
-  "semi": true,
-  "singleQuote": false,
+  "trailingComma": "all",
   "tabWidth": 2,
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "proseWrap": "preserve"
+  "semi": true,
+  "singleQuote": true,
+  "endOfLine": "auto",
+  "printWidth": 100,
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
