--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "npm run lint-eslint && npm run lint-stylelint",
     "lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js {src,scripts}/**/*.{ts,tsx,js}",
     "lint-stylelint": "stylelint --config .stylelintrc.json src/**/*.scss --syntax scss",
+    "start": "cross-env-shell NODE_ENV=development ts-node --files -P ./scripts/tsconfig.json ./scripts/start.ts --open",
+    "build": "cross-env-shell NODE_ENV=production ts-node --files -P scripts/tsconfig.json scripts/build",
+    "build-analyze": "cross-env-shell NODE_ENV=production ts-node --files -P scripts/tsconfig.json scripts/build --analyze",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "keywords": [],
@@ -17,11 +20,53 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.12.1",
+    "@babel/plugin-transform-react-inline-elements": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
+    "@types/circular-dependency-plugin": "^5.0.1",
+    "@types/compression-webpack-plugin": "^4.0.1",
+    "@types/connect-history-api-fallback": "^1.3.3",
+    "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
+    "@types/friendly-errors-webpack-plugin": "^0.1.2",
+    "@types/html-webpack-plugin": "^3.2.3",
+    "@types/http-proxy-middleware": "^0.19.3",
+    "@types/mini-css-extract-plugin": "^1.0.0",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/terser-webpack-plugin": "^5.0.0",
+    "@types/webpack": "^4.41.22",
+    "@types/webpack-bundle-analyzer": "^3.8.0",
+    "@types/webpack-dev-middleware": "^3.7.2",
+    "@types/webpack-hot-middleware": "^2.25.3",
+    "@types/webpack-merge": "^4.1.5",
+    "@types/webpackbar": "^4.0.0",
+    "@types/yargs": "^15.0.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "autoprefixer": "^10.0.1",
+    "babel-loader": "^8.1.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "circular-dependency-plugin": "^5.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^6.0.3",
+    "connect-history-api-fallback": "^1.6.0",
     "conventional-changelog-cli": "^2.1.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.13.0",
@@ -33,16 +78,50 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-unicorn": "^23.0.0",
+    "express": "^4.17.1",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "get-port": "^5.1.1",
+    "html-webpack-plugin": "^4.5.0",
+    "http-proxy-middleware": "^1.0.6",
     "husky": "^4.3.0",
-    "lint-staged": "^10.4.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "lint-staged": "^10.4.2",
+    "log-symbols": "^4.0.0",
+    "mini-css-extract-plugin": "^1.0.0",
+    "node-sass": "^4.14.1",
+    "open": "^7.3.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "^4.0.4",
+    "postcss-normalize": "^9.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "sass-loader": "^10.0.3",
+    "size-plugin": "^2.0.1",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.18.0"
+    "stylelint-scss": "^3.18.0",
+    "terser-webpack-plugin": "^5.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.1.3",
+    "webpack-build-notifier": "^2.1.0",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.2.0",
+    "webpack-open-browser": "^1.0.5",
+    "webpackbar": "^4.0.0",
+    "yargs": "^16.1.0"
   },
   "husky": {
     "hooks": {
@@ -60,5 +139,17 @@
     "*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
       "prettier --write"
     ]
+  },
+  "browserslist": [
+    "last 2 versions",
+    "Firefox ESR",
+    "> 1%",
+    "ie >= 11"
+  ],
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0"
   }
 }
